displaying each answer for questions

--- a/app/templates/question-view-template.html
+++ b/app/templates/question-view-template.html
@@ -1,2 +1,7 @@
 <%- content %>
-<%- answers %>
+
+<ul>
+  <% answers.forEach(function(data){ %>
+    <li id=<%- data._id %>><%- JSON.stringify(data.content) %></li> 
+  <% }, this) %>  
+</ul>
