radio button _question._id

--- a/app/templates/answer-view-template.html
+++ b/app/templates/answer-view-template.html
@@ -1,1 +1,3 @@
-<%- content %>
+<div class="radio">
+  <label><input type="radio" name="<%- questionId %>-radio" value="<%- _id %>"/><%- content %></label>
+</div>
